cmake_minimum_required (VERSION 3.8)

add_subdirectory( Consumer/100_Series_Examples/100__MarketPrice__Streaming )
add_subdirectory( Consumer/100_Series_Examples/101__MarketPrice__QosPriority )
add_subdirectory( Consumer/100_Series_Examples/102__MarketPrice__Snapshot )
add_subdirectory( Consumer/100_Series_Examples/110__MarketPrice__FileConfig )
add_subdirectory( Consumer/100_Series_Examples/111__MarketPrice__UserSpecifiedFileConfig)
add_subdirectory( Consumer/100_Series_Examples/120__MarketPrice__FieldListWalk )
add_subdirectory( Consumer/100_Series_Examples/121__MarketPrice__FieldListSearchByName )
add_subdirectory( Consumer/100_Series_Examples/130__MarketPrice__UserDisp )
add_subdirectory( Consumer/100_Series_Examples/140__MarketByOrder__Streaming )
add_subdirectory( Consumer/200_Series_Examples/200__MarketPrice__Streaming )
add_subdirectory( Consumer/200_Series_Examples/210__MarketByOrder__Streaming )
add_subdirectory( Consumer/200_Series_Examples/220__MarketByPrice__PrivateStream )
add_subdirectory( Consumer/200_Series_Examples/230__MarketByOrder__SwitchEntryAction )
add_subdirectory( Consumer/200_Series_Examples/240__MarketPrice__RippleFields )
add_subdirectory( Consumer/200_Series_Examples/250__Custom__Opaque )
add_subdirectory( Consumer/200_Series_Examples/260__MarketPrice__FieldListSearchByList )
add_subdirectory( Consumer/200_Series_Examples/270__SymbolList )
add_subdirectory( Consumer/200_Series_Examples/280__MarketPrice__Performance )
add_subdirectory( Consumer/200_Series_Examples/290__Custom__Decode )
add_subdirectory( Consumer/200_Series_Examples/291__Custom__DownCast )
add_subdirectory( Consumer/300_Series_Examples/300__MarketPrice__Close )
add_subdirectory( Consumer/300_Series_Examples/301__MarketPrice__PriorityChange )
add_subdirectory( Consumer/300_Series_Examples/310__MarketPrice__Rmtes )
add_subdirectory( Consumer/300_Series_Examples/320__Custom__GenericMsg )
add_subdirectory( Consumer/300_Series_Examples/330__Login__Streaming )
add_subdirectory( Consumer/300_Series_Examples/331__Directory__Streaming )
add_subdirectory( Consumer/300_Series_Examples/332__Dictionary__Streaming )
add_subdirectory( Consumer/300_Series_Examples/333__Login__Streaming__DomainRepresentation )
add_subdirectory( Consumer/300_Series_Examples/340__MarketPrice__OnStreamPost )
add_subdirectory( Consumer/300_Series_Examples/341__MarketPrice__OffStreamPost )
add_subdirectory( Consumer/300_Series_Examples/350__MarketPrice__PauseAll )
add_subdirectory( Consumer/300_Series_Examples/360__MarketPrice__View )
add_subdirectory( Consumer/300_Series_Examples/370__MarketPrice__Batch )
add_subdirectory( Consumer/400_Series_Examples/400__Custom__NestedMessaging )
add_subdirectory( Consumer/400_Series_Examples/410__MarketPrice__HorizontalScaling )
add_subdirectory( Consumer/400_Series_Examples/420__MarketPrice__AdminDomainConfig )
add_subdirectory( Consumer/400_Series_Examples/421__MarketPrice__ProgrammaticConfig )
add_subdirectory( Consumer/400_Series_Examples/422__MarketPrice__ErrorClient )
add_subdirectory( Consumer/400_Series_Examples/423__MarketPrice__AdminDomainConfig__DomainRepresentation )
add_subdirectory( Consumer/400_Series_Examples/430__MarketPrice__TrepAuthentication )
add_subdirectory( Consumer/400_Series_Examples/440__System__TunnelStream )

add_subdirectory( IProvider/100_Series_Examples/100__MarketPrice__Streaming )
add_subdirectory( IProvider/100_Series_Examples/102__MarketPrice__Snapshot )
add_subdirectory( IProvider/100_Series_Examples/130__MarketPrice__UserDispatch )
add_subdirectory( IProvider/100_Series_Examples/140__MarketByOrder__Streaming )
add_subdirectory( IProvider/100_Series_Examples/150__MarketByOrder__Snapshot )
add_subdirectory( IProvider/100_Series_Examples/160__Login__AcceptDeny )
add_subdirectory( IProvider/100_Series_Examples/161__Login__AcceptDeny__DomainRepresentation )
add_subdirectory( IProvider/200_Series_Examples/200__MarketPrice__Streaming )
add_subdirectory( IProvider/200_Series_Examples/210__MarketByPrice__Streaming )
add_subdirectory( IProvider/200_Series_Examples/240__SourceDirectory__Fanout )
add_subdirectory( IProvider/200_Series_Examples/250__GroupStatus__Fanout )
add_subdirectory( IProvider/200_Series_Examples/260__Custom__NestedMsg )
add_subdirectory( IProvider/200_Series_Examples/280__MarketPrice__Performance )
add_subdirectory( IProvider/300_Series_Examples/300__MarketPrice__Close )
add_subdirectory( IProvider/300_Series_Examples/301__MarketPrice__PriorityChange )
add_subdirectory( IProvider/300_Series_Examples/320__Custom__GenericMsg )
add_subdirectory( IProvider/300_Series_Examples/331__Directory__UserControl )
add_subdirectory( IProvider/300_Series_Examples/332__Dictionary__UserControl )
add_subdirectory( IProvider/300_Series_Examples/380__MarketPrice__ConnectionLost )

add_subdirectory( NiProvider/100_Series_Examples/100__MarketPrice__Streaming )
add_subdirectory( NiProvider/100_Series_Examples/110__MarketByOrder__Streaming )
add_subdirectory( NiProvider/200_Series_Examples/200__MarketPrice__Streaming )
add_subdirectory( NiProvider/200_Series_Examples/210__MarketByOrder__Streaming )
add_subdirectory( NiProvider/200_Series_Examples/250__MarketPrice__Performance )
add_subdirectory( NiProvider/200_Series_Examples/251__MarketPrice__Performance__KeyByServiceId )
add_subdirectory( NiProvider/300_Series_Examples/300__MarketPrice__Streaming )
add_subdirectory( NiProvider/300_Series_Examples/310__MarketByOrder__Streaming )
add_subdirectory( NiProvider/300_Series_Examples/320__MarketPrice__Streaming__StatusClosed )
add_subdirectory( NiProvider/300_Series_Examples/340__Login__Streaming )
add_subdirectory( NiProvider/300_Series_Examples/360__MarketPrice__ConnectionRecovery )
add_subdirectory( NiProvider/400_Series_Examples/430__MarketPrice__TrepAuthentication )
